@@ -1,3 +1,10 @@
+2002-12-13  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-util.c (bonobo_help_display_cb):
+	re-hash so we can still allow components to register
+	their own custom prefix intead of using the main
+	program's always.
+
 2002-12-02  Marcus  <marcus@freebsd.org>
 
 	* bonobo/bonobo-ui-util.c (bonobo_help_display_cb):
